[package]
name = "bs-diesel-utils"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs-diesel-utils-codegen = { path = "./crates/bs-diesel-utils-codegen" }

diesel = { version = "2.1.4", features = ["postgres", "chrono", "32-column-tables", "serde_json", "r2d2", "numeric"] }
bigdecimal = "0.4.2"
dotenv = "0.15.0"
futures = { version = "0.3.5", features = ["compat"] }
thiserror = "1.0.11"
tokio = { version = "^1", features = ["rt"] }
